a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/redeclaration2.min
#redeclaration1
var x : int;
var x : string;

